# ommp

./: .gitignore  Cargo.toml  LICENSE  README.md  SPECIFICATION.md
src/: main.rs
src/app/: handler.rs  mod.rs  persist.rs  state.rs
src/audio/: mod.rs  player.rs
src/event/: input.rs  mod.rs
src/lyrics/: mod.rs
src/ui/: layout.rs  mod.rs  pane.rs  theme.rs
src/ui/panes/: album_artists_pane.rs  albums_pane.rs  artists_pane.rs  dir_browser_pane.rs  format_pane.rs  genre_pane.rs  library_pane.rs  lyrics_pane.rs  mod.rs  playlists_pane.rs  queue_pane.rs  search_pane.rs
src/ui/widgets/: about_modal.rs  help_modal.rs  info_pane.rs  mod.rs  playlist_modal.rs  progress_bar.rs  search_modal.rs  status_bar.rs  tab_bar.rs
